--- a/provision_lab.yml
+++ b/provision_lab.yml
@@ -61,7 +61,7 @@
   roles:
     - windows-ad-controller
 
-- name: configure common options on all windows nodes
+- name: configure common options on all windows workstation
   hosts: tag_app_management_lightbulb:&tag_role_windows_workstation
   remote_user: Administrator
   vars:
@@ -74,6 +74,19 @@
   roles:
     - windows-common
     - windows-workstation
+
+- name: configure common options on all windows nodes
+  hosts: tag_app_management_lightbulb:&tag_role_windows_node
+  remote_user: Administrator
+  vars:
+    ansible_port: 5986
+    ansible_password: "{{ ansible_password | default(domain_admin_password) }}"
+    ansible_connection: winrm
+    ansible_winrm_transport: basic
+    ansible_winrm_server_cert_validation: ignore
+  gather_facts: true
+  roles:
+    - windows-common
 
 - name: configure gitlab host
   hosts: tag_app_management_lightbulb:&tag_role_gitlab
