--- a/roles/windows-ad-controller/tasks/main.yml
+++ b/roles/windows-ad-controller/tasks/main.yml
@@ -56,6 +56,7 @@
     name: "{{ item }}"
     state: started
     start_mode: auto
+    force_dependent_services: yes
   with_items:
     - adws
     - dns
