--- a/roles/windows-ad-controller/tasks/main.yml
+++ b/roles/windows-ad-controller/tasks/main.yml
@@ -59,8 +59,12 @@
     force_dependent_services: yes
   with_items:
     - adws
+    - Afd
+    - RpcSs
+    - NTDS
     - dns
     - kdc
+    - LanmanWorkstation
     - netlogon
   ignore_errors: yes
  
