--- a/provision_lab.yml
+++ b/provision_lab.yml
@@ -29,6 +29,8 @@
       with_nested:
         - "{{ template_nodes }}"
         - "{{ users }}"
+      loop_control:
+        loop_var: item
 
     - debug:
       var: nodes
