--- a/provision_lab.yml
+++ b/provision_lab.yml
@@ -17,31 +17,45 @@
 
     - name: initialize nodes variable
       set_fact:
-        nodes: "{{ nodes|default([]) + [item] }}"
-      with_items: "{{ hosting_nodes }}"
+        nodes: "{{ hosting_nodes }}"
+
+    - name: generate nodes list
+      set_fact:
+        nodes: "{{ nodes }} + {{ template_nodes }}"
+      with_items:
+        - "{{ users }}"
 
     - debug:
         var: nodes
 
-    - name: generate nodes list
+    - name: generate windows only nodes list
       set_fact:
-        nodes: "{{ nodes }} + {{ [item.0] }}"
-      with_nested:
-        - "{{ template_nodes }}"
-        - "{{ users }}"
-      loop_control:
-        loop_var: item
+        windows_nodes: "{{ windows_nodes|default([]) + [ item ] }}"
+      with_items:
+        - "{{ nodes }}"
+      when: item.os_type is defined and item.os_type == 'windows'
 
     - debug:
-      var: nodes
+        var: windows_nodes
+
+    - name: generate linux only nodes list
+      set_fact:
+        linux_nodes: "{{ linux_nodes|default([]) + [ item ] }}"
+      with_items:
+        - "{{ nodes }}"
+      when: item.os_type is not defined or item.os_type == 'linux'
+
+    - debug:
+        var: linux_nodes
 
     - pause:
+
 
 - name: provision ec2 instances
   hosts: localhost
   become: no
   roles:
-    - ansible-role-ec2
+    - role: ansible-role-ec2
 
 - name: add hosts to groups
   hosts: localhost
@@ -59,6 +73,20 @@
   roles:
     - user_accounts
     - common
+
+- name: change hostname on all windows nodes
+  hosts: tag_app_management_lightbulb:&tag_role_windows
+  remote_user: Administrator
+  become: no
+  vars:
+    ansible_port: 5986
+    ansible_password: "{{ domain_admin_password }}"
+    ansible_connection: winrm
+    ansible_winrm_transport: basic
+    ansible_winrm_server_cert_validation: ignore
+  gather_facts: true
+  roles:
+    - windows-hostname
 
 - name: configure common options on windows domain controller
   hosts: tag_app_management_lightbulb:&tag_role_windows_domain_controller
