--- a/w3-ansible-tower-win-lb-template-nodes-ec2.yml
+++ b/w3-ansible-tower-win-lb-template-nodes-ec2.yml
@@ -23,7 +23,7 @@ template_nodes:
     role: windows_node
     app_name: management_lightbulb
     pod_name: "{{ item.username }}"
-    instance_type: t2.small
+    instance_type: t2.medium
     image: "{{ win2016_ami_id|default('ami-603b1c1a') }}" #windows 2016 base
     os_type: windows
     user_data: "{{ lookup('template', 'templates/windows.userdata.txt.j2') }}"
@@ -31,7 +31,7 @@ template_nodes:
     role: windows_node
     app_name: management_lightbulb
     pod_name: "{{ item.username }}"
-    instance_type: t2.small
+    instance_type: t2.medium
     image: "{{ win2016_ami_id|default('ami-603b1c1a') }}" #windows 2016 base
     os_type: windows
     user_data: "{{ lookup('template', 'templates/windows.userdata.txt.j2') }}"
