--- a/roles/windows-hostname/tasks/main.yml
+++ b/roles/windows-hostname/tasks/main.yml
@@ -1,32 +1,6 @@
 ---
-- debug:
-    msg: "{{ hostvars[inventory_hostname] }}"
-
 - name: change hostname
   win_shell: Rename-Computer -NewName {{ hostname }}
-  register: change_hostname
-  when: hostname|lower == ansible_hostname|lower
+  when: hostname|lower != ansible_hostname|lower
   ignore_errors: yes
-
-- name: windows reboot
-  win_reboot:
-  register: windows_reboot
-  async: 7200
-  poll: 0
-  when: change_hostname | changed
-
-- debug:
-    msg: "{{ windows_reboot }}"
-
-- name: wait for reboot to complete
-  async_status: jid="{{ windows_reboot.ansible_job_id }}"
-  register: windows_reboot_result
-  until: windows_reboot_result.finished
-  retries: 10
-  when: windows_reboot | changed
-
-- name: waiting for servers instance come online
-  wait_for_connection:
-  when: windows_reboot_result | changed
-  ignore_errors: yes
-
+  notify: windows reboot
