--- a/roles/windows-ad-controller/tasks/main.yml
+++ b/roles/windows-ad-controller/tasks/main.yml
@@ -235,10 +235,8 @@
 
 - name: Add windows AD users 
   win_domain_user:
-    name: "{{ user_prefix }}{{ item }}" 
-    upn: "{{ user_prefix}}{{ item }}@{{ dns_domain_name }}"
-    #name: "{{ item }}" 
-    #upn: "{{ item }}@{{ dns_domain_name }}"
+    name: "{{ item.username }}"
+    upn: "{{ item.username }}@{{ dns_domain_name }}"
     state: present
     enabled: yes
     account_locked: no 
@@ -250,10 +248,8 @@
     firstname: user
     surname: user
     company: AnsibleByRedHat
-    email: "{{user_prefix}}{{ item }}@{{ dns_domain_name }}"
-    #email: "{{ item }}@{{ dns_domain_name }}"
-  #with_items: "{{ users }}"
-  with_sequence: count="{{ user_count }}"
+    email: "{{ item.username }}@{{ dns_domain_name }}"
+  with_items: "{{ users }}"
 
 - name: Get current DNS search string
   win_shell: Get-DnsClientGlobalSetting | Select SuffixSearchList
