--- a/roles/windows-workstation/tasks/main.yml
+++ b/roles/windows-workstation/tasks/main.yml
@@ -32,10 +32,10 @@
   win_command: git config --global http.sslVerify "false"
 
 - name: Set git user 
-  win_command: git config --global user.name "{{ user_prefix }}{{ inventory_hostname | regex_replace('\\D') }}"
+  win_command: git config --global user.name "{{ username }}{{ inventory_hostname | regex_replace('\\D') }}"
 
 - name: Set git user email
-  win_command: git config --global user.email "{{ user_prefix }}{{ inventory_hostname | regex_replace('\\D') }}@{{ dns_domain_name }}"
+  win_command: git config --global user.email "{{ username }}{{ inventory_hostname | regex_replace('\\D') }}@{{ dns_domain_name }}"
 
 - name: Set git to cache credentials
   win_command: git config --global credential.helper wincred
