--- a/roles/gitlab-postconfig/defaults/main.yml
+++ b/roles/gitlab-postconfig/defaults/main.yml
@@ -7,6 +7,10 @@ dns_domain_name: "example.com"
 # Users and Password to Create
 users_password: "MySecureP@ssword1"        # MUST FOLLOW WINDOWS AD PASSWORD RULES
 users:
-  - user1
-  - user2
+  - name: user1
+    username: user1
+    email: user1
+  - name: user2
+    username: user2
+    email: user2
 
