change groups.all to groups.lab_hosts

--- a/provision_lab.yml
+++ b/provision_lab.yml
@@ -156,6 +156,7 @@
   become_method: sudo
   gather_facts: true
   roles:
+    - linux-dns
     - geerlingguy.gitlab
 
 # run post-config separate to avoid handler restart issue
