--- a/roles/gitlab-postconfig/tasks/main.yml
+++ b/roles/gitlab-postconfig/tasks/main.yml
@@ -100,7 +100,8 @@
 
 - name: GitLab Post | Create local users
   gitlab_user:
-    server_url: https://{{ hostname | lower }}.{{ dns_domain_name }}
+    #server_url: https://{{ hostname | lower }}.{{ dns_domain_name }}
+    server_url: https://{{ inventory_hostname }}
     validate_certs: False
     login_user: root
     login_password: "{{ domain_admin_password }}"
@@ -111,6 +112,7 @@
     confirm: False
     state: present
   with_items: "{{ users }}"
+  delegate_to: localhost
 
 - name: GitLab Post | Create Projects in GitLab
   command: ./create_project.py -s "https://{{ hostname | lower }}.{{ dns_domain_name }}" -u {{ item.username }} -p {{ users_password }} -r {{ item.username }}-playbooks
