--- a/roles/linux-dns/tasks/main.yml
+++ b/roles/linux-dns/tasks/main.yml
@@ -5,6 +5,7 @@
 - name: set DNS resolution in ifcfg file
   blockinfile:
     dest: /etc/sysconfig/network-scripts/ifcfg-eth0
+    marker: "## {mark} added by ansible"
     block: |
       DNS1={{ dns_server }}
       DNS2=8.8.8.8
