change groups.all to groups.lab_hosts

--- a/roles/gitlab-postconfig/tasks/main.yml
+++ b/roles/gitlab-postconfig/tasks/main.yml
@@ -96,7 +96,7 @@
 #  changed_when: "user_prefix + item + 'already exists' not in gitlab_users.stdout"
 
 - debug:
-    msg: "gitlab hostname is {{ hostname | lower }}"
+    msg: "gitlab hostname is {{ inventory_hostname }}"
 
 - name: GitLab Post | Create local users via API
   uri:
