--- a/roles/gitlab-postconfig/tasks/main.yml
+++ b/roles/gitlab-postconfig/tasks/main.yml
@@ -36,10 +36,10 @@
 
 - name: GitLab Post | Create projects via API
   uri:
-    url: https://{{ inventory_hostname }}/api/v4/projects
+    url: "https://{{ inventory_hostname }}/api/v4/projects/user/{{ item.username }}"
     method: POST
-    user: "{{ item.username }}"
-    password: "{{ users_password }}"
+    user: Administrator
+    password: "{{ domain_admin_password }}"
     force_basic_auth: yes
     validate_certs: no
     status_code: 200
