--- a/roles/gitlab-postconfig/tasks/main.yml
+++ b/roles/gitlab-postconfig/tasks/main.yml
@@ -36,10 +36,10 @@
 
 - name: GitLab Post | Create projects via API
   uri:
-    url: "https://{{ inventory_hostname }}/api/v4/projects/user/{{ item.username }}"
+    url: "https://{{ inventory_hostname }}/api/v4/projects"
     method: POST
-    user: root
-    password: "{{ domain_admin_password }}"
+    user: "{{ item.username }}"
+    password: "{{ users_password }}"
     force_basic_auth: yes
     validate_certs: no
     status_code: 200
@@ -67,20 +67,20 @@
   when: projects_create | success
 
 # This module did nothing...  but finished OK.  Why?
-- name: GitLab Post | Create Gitlab Project in group Ansible
-  gitlab_project:
-    server_url: https://{{ hostname | lower }}.{{ dns_domain_name }}
-    validate_certs: False
-    login_user: "{{ item.username }}"
-    login_password: "{{ users_password }}"
-    visibility_level: 10
-    name: ansible-playbooks
-    issues_enabled: True
-    wiki_enabled: False
-    snippets_enabled: False
-    merge_requests_enabled: True
-    state: present
-  with_items: "{{ users }}"
+#- name: GitLab Post | Create Gitlab Project in group Ansible
+#  gitlab_project:
+#    server_url: https://{{ hostname | lower }}.{{ dns_domain_name }}
+#    validate_certs: False
+#    login_user: "{{ item.username }}"
+#    login_password: "{{ users_password }}"
+#    visibility_level: 10
+#    name: ansible-playbooks
+#    issues_enabled: True
+#    wiki_enabled: False
+#    snippets_enabled: False
+#    merge_requests_enabled: True
+#    state: present
+#  with_items: "{{ users }}"
 
 - name: GitLab Post | Copy python create project script
   copy:
@@ -148,45 +148,45 @@
 - debug:
     msg: "gitlab hostname is {{ inventory_hostname }}"
 
-#- name: GitLab Post | Create local users via API
-#  uri:
-#    url: https://{{ inventory_hostname }}/api/v4/users
-#    method: POST
-#    user: Administrator
-#    password: "{{ domain_admin_password }}"
-#    force_basic_auth: yes
-#    validate_certs: no
-#    status_code: 200
-#    body_format: json
-#    headers:
-#      Content-Type: application/json
-#    body: >
-#      {
-#        "username": "{{ item.username }}",
-#        "password": "{{ users_password }}",
-#        "name": "{{ item.name }}",
-#        "mail": "{{ item.email }}"
-#      }
-#  with_items: "{{ users }}"
-#  delegate_to: localhost
-#  become: no
-
-- name: GitLab Post | Create local users
-  gitlab_user:
-    #server_url: https://{{ hostname | lower }}.{{ dns_domain_name }}
-    server_url: https://{{ inventory_hostname }}
-    validate_certs: False
-    login_user: Administrator
-    login_password: "{{ domain_admin_password }}"
-    name: "{{ item.name }}"
-    username: "{{ item.username }}"
-    password: "{{ users_password }}"
-    email: "{{ item.username }}@{{ dns_domain_name }}"
-    confirm: False
-    state: present
+- name: GitLab Post | Create local users via API
+  uri:
+    url: https://{{ inventory_hostname }}/api/v4/users
+    method: POST
+    user: root
+    password: "{{ domain_admin_password }}"
+    force_basic_auth: yes
+    validate_certs: no
+    status_code: 200
+    body_format: json
+    headers:
+      Content-Type: application/json
+    body: >
+      {
+        "username": "{{ item.username }}",
+        "password": "{{ users_password }}",
+        "name": "{{ item.name }}",
+        "mail": "{{ item.email }}"
+      }
   with_items: "{{ users }}"
   delegate_to: localhost
   become: no
+
+#- name: GitLab Post | Create local users
+#  gitlab_user:
+#    #server_url: https://{{ hostname | lower }}.{{ dns_domain_name }}
+#    server_url: https://{{ inventory_hostname }}
+#    validate_certs: False
+#    login_user: root
+#    login_password: "{{ domain_admin_password }}"
+#    name: "{{ item.name }}"
+#    username: "{{ item.username }}"
+#    password: "{{ users_password }}"
+#    email: "{{ item.username }}@{{ dns_domain_name }}"
+#    confirm: False
+#    state: present
+#  with_items: "{{ users }}"
+#  delegate_to: localhost
+#  become: no
 
 - name: GitLab Post | Create Projects in GitLab
   command: ./create_project.py -s "https://{{ hostname | lower }}.{{ dns_domain_name }}" -u {{ item.username }} -p {{ users_password }} -r {{ item.username }}-playbooks
