--- a/roles/gitlab-postconfig/tasks/main.yml
+++ b/roles/gitlab-postconfig/tasks/main.yml
@@ -171,22 +171,22 @@
 #  delegate_to: localhost
 #  become: no
 
-#- name: GitLab Post | Create local users
-#  gitlab_user:
-#    #server_url: https://{{ hostname | lower }}.{{ dns_domain_name }}
-#    server_url: https://{{ inventory_hostname }}
-#    validate_certs: False
-#    login_user: root
-#    login_password: "{{ domain_admin_password }}"
-#    name: "{{ item.name }}"
-#    username: "{{ item.username }}"
-#    password: "{{ users_password }}"
-#    email: "{{ item.username }}@{{ dns_domain_name }}"
-#    confirm: False
-#    state: present
-#  with_items: "{{ users }}"
-#  delegate_to: localhost
-#  become: no
+- name: GitLab Post | Create local users
+  gitlab_user:
+    #server_url: https://{{ hostname | lower }}.{{ dns_domain_name }}
+    server_url: https://{{ inventory_hostname }}
+    validate_certs: False
+    login_user: root
+    login_password: "{{ domain_admin_password }}"
+    name: "{{ item.name }}"
+    username: "{{ item.username }}"
+    password: "{{ users_password }}"
+    email: "{{ item.username }}@{{ dns_domain_name }}"
+    confirm: False
+    state: present
+  with_items: "{{ users }}"
+  delegate_to: localhost
+  become: no
 
 - name: GitLab Post | Create Projects in GitLab
   command: ./create_project.py -s "https://{{ hostname | lower }}.{{ dns_domain_name }}" -u {{ item.username }} -p {{ users_password }} -r {{ item.username }}-playbooks
